# or-tools-experience-minimal

./: README.md  pyproject.toml
docs/: comparison-with-PuLP.md  modeling-notes.md  sample-sites.md
examples/: 01_cp_sat_basic.py  02_assignment_cp_sat.py  03_knapsack_cp_sat.py  04_shift_scheduling_cp_sat.py  05_tsp_routing.py
src/or_tools_experience_minimal/: status.py
tests/: test_examples.py
